route-http.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-http
spec:
  host: example-http.apps.okd92.aws0.sikademo.com
  to:
    kind: Service
    name: example
  port:
    targetPort: 8000
