route-https.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-https
spec:
  host: example-https.apps.okd92.aws0.sikademo.com
  to:
    kind: Service
    name: example
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIEkzCCA3ugAwIBAgISBC1JDzEy0+cobTXxB0PVNWIWMA0GCSqGSIb3DQEBCwUA
[...]
      NflR0IN1gB6dYcZOSakEiafe0vuePio=
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
    key: |
      -----BEGIN EC PRIVATE KEY-----
      MHcCAQEEIDClwK/3r9QUrQt72MIR65zdZjDJVypZ3r8jh8526W7woAoGCCqGSM49
[...]
      CQTlZysAcuRoniffEZFWDTzGX4D8koeCkw==
      -----END EC PRIVATE KEY-----
    caCertificate: |

      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----

      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
