route-le.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-le
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: example-le.apps.okd0.aws0.sikademo.com
  to:
    kind: Service
    name: example
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
